# data-engineering-zoomcamp_docker_workshop

./: .gitignore  README.md
module-1-docker-terraform/: local_terraform_file_main.tf
module-1-docker-terraform/pipeline/: .terraform.lock.hcl  Dockerfile  docker-compose.yaml  queries.md
module-2-workflow-orchestration/: docker-compose.yml
module-2-workflow-orchestration/flows/: 01_hello_world.yaml  02_python.yaml  04_postgres_taxi.yaml  06_gcp_kv.yaml  07_gcp_setup.yaml  08_gcp_taxi.yaml  09_gcp_taxi_scheduled.yaml
module-3-data-warehouse/: README.md  load_yellow_taxi_data.py  queries.sql
module-4-dbt/: main.py  pyproject.toml
module-4-dbt/taxi_rides_ny/: .gitignore  .user.yml  dbt_project.yml  profiles.yml
module-6-batch/: .gitignore  03_test.py  04_pyspark.py  05_taxi_schema.py  06_spark_sql_big_query.py  06_spark_sql_unite_yellow_and_green_taxi_data.py  07_groupby_join.py  08_rdd_classic.py  08_spark_mlops_ancient.py  08_spark_mlops_modern.py  09_spark_GCS__modern.py  pyproject.toml  run_06_spark_sql_big_query.sh  test_spark.py
module-6-batch/10_dataproc_serverless_modern/: main.tf  process_taxi.py  variables.tf
module-6-batch/homework/: q1.py  q2.py  q3.py  q4.py  q6.py
module-7-streaming/: .gitignore  docker-compose.yml  pyproject.toml
module-7-streaming/live/: docker-compose.yaml
module-7-streaming/q2/: answer.txt  (+1 more)
pipeline/: Dockerfile  docker-compose.yaml  ingest_data.py  main.tf  notebook.ipynb  pipeline.py  variables.tf
test/: script.py
workshops/ai-assissted-data-ingestion-with-DLT/taxi-pipeline/: pyproject.toml  taxi_pipeline.py
(+35 files in other folders)
