[project]
name = "module-6-batch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=3.0.1",
    "pyspark>=4.1.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "jinja2>=3.1.6",
    "marimo>=0.20.4",
    "matplotlib>=3.10.8",
]
